indico_themes_canonical/static/css/_default/participant-list.css
/* ---------- Styles for the participation list ---------- */

.i-table.tablesorter-headerRow {
  background-color: var(--brand-white);
  color: var(--brand-black);
  text-transform: uppercase;
  font-size: 0.75rem;
}

.i-table.tablesorter-header.tablesorter-headerUnSorted,
.i-table.tablesorter-header.tablesorter-headerAsc.header-sort-asc,
.i-table.tablesorter-header.tablesorter-headerDesc.header-sort-desc {
  background-color: var(--brand-white);
}

.i-table.tablesorter-header:hover {
  background-color: var(--brand-off-white);
}

.list table.i-table {
  display: block;
  overflow-x: auto;
  white-space: nowrap;
  height: 65vh;
}

table.i-table thead {
  position: sticky;
  top: 0;
}

table thead th:first-child,
table tbody td:first-child {
  position: sticky;
  left: 0;
  z-index: 2;
  background: var(--brand-white);
}

